k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supply-chain-risk
  labels:
    name: supply-chain-risk
    environment: production
